Fix start menu and update templates

--- a/templates/promo.html
+++ b/templates/promo.html
@@ -32,7 +32,7 @@
 
     <div class="grid-container" id="cards-container"></div>
 
-    <footer>Sentra Guest OS @ 2025 | SGO V1.0</footer>
+    <footer>Sentra Guest OS @ 2025 | SGO V1.1 (Promo)</footer>
     <script>
         const texts = {
             'id': {
