--- a/templates/event.html
+++ b/templates/event.html
@@ -32,7 +32,7 @@
 
     <div class="grid-container" id="cards-container"></div>
 
-    <footer>Sentra Guest OS @ 2025 | SGO V1.0</footer>
+    <footer>Sentra Guest OS @ 2025 | SGO V1.1 (Event)</footer>
     <script>
         const texts = {
             'id': {
