--- a/templates/wisata.html
+++ b/templates/wisata.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="grid-container" id="cards-container"></div>
-    <footer>Sentra Guest OS @ 2025 | SGO V1.0</footer>
+    <footer>Sentra Guest OS @ 2025 | SGO V1.1 (Wisata)</footer>
     <script>
         const texts = {
             'id': {
